--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,12 @@ repos:
       - id: conventional-pre-commit
         stages: [commit-msg]
         args: [feat, fix, docs, style, refactor, perf, test, build, ci, chore, revert]
+
+  - repo: local
+    hooks:
+      - id: terraform-doc-generate
+        name: Generate Terraform Documentation
+        entry: tfplugindocs generate
+        language: system
+        pass_filenames: false
+        always_run: true
